--- a/src/app/shared/common/otp/modal-otp/modal-otp.component.html
+++ b/src/app/shared/common/otp/modal-otp/modal-otp.component.html
@@ -1,6 +1,6 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-buttons slot="end">
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="end" mode="md">
       <ion-button (click)="dismiss()">
         <ion-icon name="close-outline" size="large"></ion-icon>
       </ion-button>
@@ -43,7 +43,13 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="verifyOtp()" [disabled]="otpValue?.length !== 6">
+        <ion-button
+          expand="block"
+          shape="round"
+          color="success"
+          (click)="verifyOtp()"
+          [disabled]="otpValue?.length !== 6"
+        >
           {{ 'VERIFY' | translate }}
         </ion-button>
       </ion-col>
