modify primary color

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,12 +3,12 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #003ea5;
-  --ion-color-primary-rgb: 0, 62, 165;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #003791;
-  --ion-color-primary-tint: #1a51ae;
+  --ion-color-primary: #99cc33;
+  --ion-color-primary-rgb: 153, 204, 51;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0, 0, 0;
+  --ion-color-primary-shade: #87b42d;
+  --ion-color-primary-tint: #a3d147;
 
   --ion-color-secondary: #ff7d00;
   --ion-color-secondary-rgb: 255, 125, 0;
