--- a/src/app/pages/favorite/favorite-list/favorite-list.component.html
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.html
@@ -1,19 +1,19 @@
 <ion-header [translucent]="true" class="ion-no-border">
   <ion-toolbar>
     <ion-title> {{ 'FAVORITES' | translate }} </ion-title>
-    <ion-title slot="end" class="add-favorite">
+    <ion-text slot="end" class="add-favorite" (click)="addToList()">
       <ion-icon name="add-outline"></ion-icon>
-      <ion-text (click)="addToList()">
+      <ion-text>
         {{ 'ADD_NEW_LIST' | translate }}
       </ion-text>
-    </ion-title>
+    </ion-text>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list class="ion-padding">
     <ion-item class="favorite-item ion-margin-bottom" *ngFor="let item of favorites">
-      <ion-label>{{ item.name }}</ion-label>
+      <ion-label class="favorite-name">{{ item.name }}</ion-label>
       <ion-text
         slot="end"
         class="ion-text-right text-see-list link"
