--- a/src/app/pages/favorite/favorite-list/favorite-list.component.scss
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.scss
@@ -1,9 +1,22 @@
 .favorite-item {
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  border: 1px solid var(--ion-color-primary);
+  border-radius: 4px;
+  color: var(--ion-color-primary);
+}
+
+.favorite-name {
+  font-weight: bold;
 }
 
 .add-favorite,
 .text-see-list {
   font-size: 12px;
+}
+
+.add-favorite {
+  color: var(--ion-color-twilight-blue);
+  border: 1px solid var(--ion-color-twilight-blue);
+  padding: 4px 12px;
+  border-radius: 4px;
+  margin: 14px 14px;
 }
