--- a/src/app/pages/cart/cart.page.html
+++ b/src/app/pages/cart/cart.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-  <ion-toolbar>
+  <ion-toolbar mode="ios">
     <ion-title>{{'MY_CART' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,16 +14,18 @@
   </ion-grid>
 </ion-content>
 
-<ion-footer class="ion-no-border ion-padding-horizontal">
-  <ion-grid>
-    <ion-row class="ion-justify-content-center">
-      <ion-col size="6">
-        <span>{{'TOTAL_PRICE' | translate}}</span> <br />
-        <span><b>Rp. {{totalPrice | number}}</b></span>
-      </ion-col>
-      <ion-col size="6" class="ion-text-right" [routerLink]="['/checkout']">
-        <ion-button> {{'CHECKOUT' | translate}} </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+<ion-footer class="ion-padding-horizontal">
+  <ion-toolbar mode="md">
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col size="6">
+          <span>{{'TOTAL_PRICE' | translate}}</span> <br />
+          <span><b>Rp. {{totalPrice | number}}</b></span>
+        </ion-col>
+        <ion-col size="6" class="ion-text-right" [routerLink]="['/checkout']">
+          <ion-button color="primary" size="small" shape="round"> {{'CHECKOUT' | translate}} </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-toolbar>
 </ion-footer>
