--- a/src/app/pages/product/product-detail/product-detail.component.html
+++ b/src/app/pages/product/product-detail/product-detail.component.html
@@ -1,14 +1,17 @@
 <ion-header class="ion-no-border product-detail-upper">
-  <ion-toolbar>
-    <ion-buttons slot="start" defaultHref="/tabs/home">
-      <ion-back-button></ion-back-button>
+  <ion-toolbar mode="ios">
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()">
+        <ion-icon name="chevron-back-outline" slot="icon-only" color="dark"></ion-icon>
+      </ion-button>
     </ion-buttons>
-    <ion-row>
-      <ion-col size="12" class="ion-no-padding">
-        <img src="assets/images/placeholder-banner.png" />
-      </ion-col>
-    </ion-row>
+    <ion-title>{{ productData?.name }}</ion-title>
   </ion-toolbar>
+  <ion-row>
+    <ion-col size="12" class="ion-no-padding ion-text-center">
+      <img class="img-product" [src]="productData?.image_url" />
+    </ion-col>
+  </ion-row>
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -17,25 +20,25 @@
       <ion-col size="12">
         <ion-row class="ion-align-items-center">
           <ion-col size="11" class="ion-no-padding">
-            <h4>Alpukat Super Mentega Alpukat Super Mentega</h4>
+            <h4>{{ productData?.name }}</h4>
           </ion-col>
           <ion-col size="1" class="ion-no-padding ion-text-right">
-            <ion-icon name="{{ !isFavorite ? 'heart-outline' : 'heart' }}" (click)="ctaFavorite()"></ion-icon>
+            <ion-icon name="list-outline" (click)="ctaFavorite()"></ion-icon>
           </ion-col>
         </ion-row>
 
         <ion-row class="ion-align-items-center">
           <ion-col size="12" class="ion-no-padding">
-            <ion-text color="medium">250-400gr/pcs</ion-text>
+            <ion-text color="medium">{{ productData?.weight }}/{{ productData?.unit }}</ion-text>
           </ion-col>
         </ion-row>
 
-        <ion-row class="ion-align-items-center">
+        <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="6" class="ion-no-padding">
-            <h4>Rp. 22,000 /kg</h4>
+            <h4>Rp. {{ productData?.price | number }}</h4>
           </ion-col>
-          <ion-col size="6" class="ion-no-padding">
-            <ion-button expand="block" color="primary" (click)="addToCart()">
+          <ion-col size="6" class="ion-no-padding ion-text-right">
+            <ion-button color="primary" size="small" shape="round" (click)="addItemToCart()">
               {{ 'ADD_TO_CART' | translate }}
             </ion-button>
           </ion-col>
@@ -46,7 +49,7 @@
     <ion-row class="ion-justify-content-between">
       <ion-col size="12">
         <h5>{{ 'DESCRIPTION' | translate }}</h5>
-        <p [innerHTML]="'OKEEE!'"></p>
+        <p [innerHTML]="productData?.description"></p>
       </ion-col>
     </ion-row>
 
