update css variable & ui

--- a/src/app/pages/favorite/favorite-list/favorite-list.component.html
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.html
@@ -12,7 +12,7 @@
 
 <ion-content>
   <ion-list class="ion-padding">
-    <ion-item class="favorite-item ion-margin-bottom" *ngFor="let item of favorites">
+    <ion-item lines="none" class="favorite-item ion-margin-bottom" *ngFor="let item of favorites">
       <ion-label class="favorite-name">{{ item.name }}</ion-label>
       <ion-text
         slot="end"
