--- a/src/app/pages/favorite/favorite-list/favorite-list.component.scss
+++ b/src/app/pages/favorite/favorite-list/favorite-list.component.scss
@@ -1,7 +1,7 @@
 .favorite-item {
-  border: 1px solid var(--ion-color-primary);
+  border: 1px solid var(--ion-color-success);
   border-radius: 4px;
-  color: var(--ion-color-primary);
+  color: var(--ion-color-success);
 }
 
 .favorite-name {
@@ -14,8 +14,8 @@
 }
 
 .add-favorite {
-  color: var(--ion-color-twilight-blue);
-  border: 1px solid var(--ion-color-twilight-blue);
+  color: var(--ion-color-primary);
+  border: 1px solid var(--ion-color-primary);
   padding: 4px 12px;
   border-radius: 4px;
   margin: 14px 14px;
