--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,12 +3,12 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #99cc33;
-  --ion-color-primary-rgb: 153, 204, 51;
-  --ion-color-primary-contrast: #000000;
-  --ion-color-primary-contrast-rgb: 0, 0, 0;
-  --ion-color-primary-shade: #87b42d;
-  --ion-color-primary-tint: #a3d147;
+  --ion-color-primary: #0f447a;
+  --ion-color-primary-rgb: 15, 68, 122;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255, 255, 255;
+  --ion-color-primary-shade: #0d3c6b;
+  --ion-color-primary-tint: #275787;
 
   --ion-color-secondary: #ff7d00;
   --ion-color-secondary-rgb: 255, 125, 0;
@@ -24,12 +24,12 @@
   --ion-color-tertiary-shade: #633ce0;
   --ion-color-tertiary-tint: #7e57ff;
 
-  --ion-color-success: #0bc412;
-  --ion-color-success-rgb: 11, 196, 18;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #0aac10;
-  --ion-color-success-tint: #23ca2a;
+  --ion-color-success: #99cc33;
+  --ion-color-success-rgb: 153, 204, 51;
+  --ion-color-success-contrast: #000000;
+  --ion-color-success-contrast-rgb: 0, 0, 0;
+  --ion-color-success-shade: #87b42d;
+  --ion-color-success-tint: #a3d147;
 
   --ion-color-warning: #ffce00;
   --ion-color-warning-rgb: 255, 206, 0;
@@ -59,12 +59,12 @@
   --ion-color-medium-shade: #6e7277;
   --ion-color-medium-tint: #8a8e93;
 
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 244, 244;
+  --ion-color-light: #cbcbcb;
+  --ion-color-light-rgb: 203, 203, 203;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --ion-color-light-shade: #b3b3b3;
+  --ion-color-light-tint: #d0d0d0;
 
   --ion-color-navy: #000978;
   --ion-color-navy-rgb: 0, 9, 120;
@@ -93,13 +93,6 @@
   --ion-color-more-gray-contrast-rgb: 255, 255, 255;
   --ion-color-more-gray-shade: #5d5d66;
   --ion-color-more-gray-tint: #797982;
-
-  --ion-color-twilight-blue: #0f447a;
-  --ion-color-twilight-blue-rgb: 15, 68, 122;
-  --ion-color-twilight-blue-contrast: #ffffff;
-  --ion-color-twilight-blue-contrast-rgb: 255, 255, 255;
-  --ion-color-twilight-blue-shade: #0d3c6b;
-  --ion-color-twilight-blue-tint: #275787;
 }
 
 // @media (prefers-color-scheme: dark) {
@@ -252,12 +245,3 @@
 //     --color: white;
 //   }
 // }
-
-.ion-color-twilight-blue {
-  --ion-color-base: var(--ion-color-twilight-blue);
-  --ion-color-base-rgb: var(--ion-color-twilight-blue-rgb);
-  --ion-color-contrast: var(--ion-color-twilight-blue-contrast);
-  --ion-color-contrast-rgb: var(--ion-color-twilight-blue-contrast-rgb);
-  --ion-color-shade: var(--ion-color-twilight-blue-shade);
-  --ion-color-tint: var(--ion-color-twilight-blue-tint);
-}
