--- a/src/app/pages/favorite/favorite-new/favorite-new.component.html
+++ b/src/app/pages/favorite/favorite-new/favorite-new.component.html
@@ -1,21 +1,32 @@
 <ion-content>
-  <ion-grid>
-    <ion-row class="ion-padding-top">
-      <ion-col class="ion-padding-horizontal"
-        ><ion-text class="modal-title">{{ 'NEW_LIST' | translate }}</ion-text>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col class="ion-padding-horizontal ion-padding-top">
-        <ion-input placeholder="{{ 'LIST_NAME' | translate }}"></ion-input>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col class="ion-padding-horizontal">
-        <ion-button expand="full" (click)="dismiss()">
-          {{ 'ADD_LIST' | translate }}
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <form (ngSubmit)="saveFavorite()" #favoriteForm="ngForm" [formGroup]="fg">
+    <ion-grid>
+      <ion-row>
+        <ion-col class="ion-padding-horizontal ion-padding-top"
+          ><ion-text class="modal-title">{{ 'NEW_LIST' | translate }}</ion-text>
+        </ion-col>
+        <ion-col class="ion-text-right">
+          <ion-icon name="close" color="light" (click)="dismiss()"></ion-icon>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-horizontal">
+          <ion-item class="ion-no-padding ion-no-margin">
+            <ion-label position="floating"> {{ 'LIST_NAME' | translate }}</ion-label>
+            <ion-input formControlName="name"></ion-input>
+          </ion-item>
+          <ion-text *ngIf="fg.controls.name.dirty" color="danger">
+            <small> {{ fg.controls.name.errors?.required?.message }}</small>
+          </ion-text>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col class="ion-padding-horizontal ion-padding-top ion-text-right">
+          <ion-text class="favorite-action" color="primary" (click)="favoriteForm.ngSubmit.emit()">
+            {{ 'ADD_LIST' | translate }}
+          </ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
