--- a/src/app/shared/common/cards/card-category/card-category.component.html
+++ b/src/app/shared/common/cards/card-category/card-category.component.html
@@ -2,8 +2,8 @@
   <ion-col class="ion-text-center ion-padding-vertical" (click)="goToProductByCategory(category?.category_id)">
     <ion-row>
       <ion-col size="12">
-        <img [src]="category?.image_url" class="cat-icon rounded" *ngIf="category?.image_url" />
-        <img src="https://via.placeholder.com/50.png" class="cat-icon rounded" *ngIf="!category?.image_url" />
+        <img [src]="category?.icon_url" class="cat-icon rounded" *ngIf="category?.icon_url" />
+        <img src="https://via.placeholder.com/50.png" class="cat-icon rounded" *ngIf="!category?.icon_url" />
       </ion-col>
       <ion-col size="12">
         <ion-text class="category-name">{{ category?.name }}</ion-text>
