--- a/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
+++ b/src/app/pages/favorite/favorite-detail/favorite-detail.component.scss
@@ -37,3 +37,15 @@
   height: 68px;
   object-fit: cover;
 }
+
+.btn-action {
+  color: white;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.total-item {
+  color: #707070;
+  font-size: 12px;
+}
