--- a/src/app/pages/home/home-brands/home-brands.component.html
+++ b/src/app/pages/home/home-brands/home-brands.component.html
@@ -3,7 +3,9 @@
     <ion-text class="section-title">{{ 'FEATURED_BRAND' | translate }}</ion-text>
   </ion-col>
   <ion-col size="4" class="ion-text-right">
-    <ion-text class="section-see-all">{{ 'SEE_ALL' | translate }}</ion-text>
+    <ion-text class="section-see-all link" [routerLink]="['/brand', 'list', 'featured']">
+      {{ 'SEE_ALL' | translate }}
+    </ion-text>
   </ion-col>
   <ion-col size="12" class="ion-padding-top">
     <ion-text class="section-desc">{{ 'FEATURED_BRAND_DESC' | translate }}</ion-text>
