--- a/src/app/pages/address/address-form/address-form.component.html
+++ b/src/app/pages/address/address-form/address-form.component.html
@@ -48,7 +48,13 @@
               >
             </ion-col>
             <ion-col size="6" class="ion-no-padding ion-text-right">
-              <ion-button fill="outline" shape="round" size="small" color="secondary">
+              <ion-button
+                fill="outline"
+                shape="round"
+                size="small"
+                color="secondary"
+                (click)="presentModalPinLocation()"
+              >
                 {{ 'PIN_LOCATION' | translate }}
               </ion-button>
             </ion-col>
@@ -165,8 +171,15 @@
 <ion-footer class="ion-no-border ion-padding-horizontal">
   <ion-grid>
     <ion-row>
-      <ion-col>
-        <ion-button expand="block" (click)="submit()" [disabled]="fg?.invalid"> {{ 'NEXT' | translate }} </ion-button>
+      <ion-col size="12">
+        <ion-button expand="block" shape="round" (click)="submit()" [disabled]="fg?.invalid">
+          {{ 'NEXT' | translate }}
+        </ion-button>
+      </ion-col>
+      <ion-col size="12" *ngIf="addressId && !addressData?.is_default">
+        <ion-button (click)="confirmDeleteAddress()" expand="block" shape="round" color="danger">
+          {{ 'DELETE_ADDRESS' | translate }}
+        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
