--- a/src/app/pages/address/address.page.html
+++ b/src/app/pages/address/address.page.html
@@ -19,7 +19,7 @@
         </span>
       </ion-col>
       <ion-col size="6" class="ion-text-right">
-        <ion-text color="primary">
+        <ion-text color="secondary">
           <small [routerLink]="['/address/form']"><b>+ {{'ADD_NEW_ADDRESS' | translate}}</b></small>
         </ion-text>
       </ion-col>
