--- a/src/app/shared/common/item-list/item-list.component.html
+++ b/src/app/shared/common/item-list/item-list.component.html
@@ -1,7 +1,11 @@
 <ng-container *ngFor="let cart of cartData; let i = index">
   <ion-row class="ion-align-items-center ion-justify-content-center ion-margin-vertical">
     <ion-col size="1.5">
-      <img [src]="cart?.product?.image_url" alt="product_image" />
+      <img
+        [routerLink]="['/product/detail', cart?.product?.product_id]"
+        [src]="cart?.product?.image_url"
+        alt="product_image"
+      />
     </ion-col>
     <ion-col size="10.5">
       <ion-row class="ion-no-padding">
@@ -12,23 +16,40 @@
         </ion-col>
       </ion-row>
       <ion-row class="ion-align-items-center ion-justify-content-center">
-        <ion-col size="5" class="ion-no-padding">
+        <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding">
           <ion-text color="medium">
-            <small>{{ cart?.product?.unit_value }} {{ cart?.product?.unit?.name }}</small>
+            <small>{{ cart?.product?.brand?.name }}</small> <br />
+            <small>{{ 'SIZE' | translate }}: {{ cart?.product?.weight }}</small>
           </ion-text>
           <br />
           <ion-text color="dark">
-            <span>Rp. {{ cart?.product?.primary_price | number }} / <small>pcs</small></span>
+            <span>Rp. {{ cart?.product?.primary_price | number }}</span>
           </ion-text>
         </ion-col>
-        <ion-col size="3" class="ion-no-padding ion-text-center">
+        <ion-col size="4" class="ion-no-padding ion-text-center" *ngIf="showSubstract">
           <ion-row>
-            <ion-col size="4"><ion-icon name="remove-circle-outline" size="small"></ion-icon></ion-col>
+            <ion-col size="4">
+              <ion-icon
+                name="remove-circle-outline"
+                size="small"
+                appDebounce
+                (debounceClick)="updateQuantity(i)"
+                (click)="updateLocalQuantity(i, false)"
+              ></ion-icon>
+            </ion-col>
             <ion-col size="4">{{ cart?.quantity }}</ion-col>
-            <ion-col size="4"><ion-icon name="add-circle-outline" size="small"></ion-icon></ion-col>
+            <ion-col size="4"
+              ><ion-icon
+                name="add-circle-outline"
+                size="small"
+                appDebounce
+                (debounceClick)="updateQuantity(i)"
+                (click)="updateLocalQuantity(i, true)"
+              ></ion-icon
+            ></ion-col>
           </ion-row>
         </ion-col>
-        <ion-col size="4" class="ion-no-padding ion-text-right">
+        <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding ion-text-right">
           <ion-text color="dark">
             <span
               ><b>Rp. {{ cart?.local_subtotal_price | number }}</b></span
